# blueprint-template

./: .gitignore  .gitmodules  Cargo.toml  Cargo.toml.liquid  Dockerfile  README.md  blueprint.json  build.rs  cargo-generate.toml  flake.nix  foundry.toml  remappings.txt
.github/: dependabot.yml
.github/workflows/: verify-template.yml
contracts/: .gitignore
contracts/src/: HelloBlueprint.sol
hooks/: pre.rhai
metadata/: blueprint-metadata.json
src/: lib.rs  main.rs
tests/: e2e.rs
{{project-name}}-bin/: Cargo.toml  Cargo.toml.liquid  build.rs
{{project-name}}-bin/src/: main.rs
{{project-name}}-lib/: Cargo.toml
{{project-name}}-lib/src/: lib.rs
{{project-name}}-lib/tests/: e2e.rs
