[package]
name = "{{project-name}}-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[dependencies]
{{project-name}}-lib = { path = "../{{project-name}}-lib" }
blueprint-sdk = { version = "0.1.0-alpha.22", default-features = false, features = ["std", "tangle"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
