[package]
name = "{{project-name}}-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
blueprint-sdk = { version = "0.1.0-alpha.22", default-features = false, features = ["std", "tracing", "macros", "tangle"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
anyhow = "1"
blueprint-anvil-testing-utils = "0.1.0-alpha.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
